--- a/src/components/Authorization/authorization.css
+++ b/src/components/Authorization/authorization.css
@@ -1,6 +1,13 @@
+.auth-page {
+  min-height: 650px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: blanchedalmond;
+}
+
 .auth-form-wrapper {
-  max-width: 400px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 400px;
+  margin-top: 20px;
 }
 
