add: http methods const

--- a/src/components/Textbook/WordCategories/WordCategories.css
+++ b/src/components/Textbook/WordCategories/WordCategories.css
@@ -1,8 +1,8 @@
-.word-categoris-wrapper {
+.word-categories-wrapper {
   display: flex;
   flex-wrap: wrap;
 }
 
-.word-categoris-wrapper > div {
+.word-categories-wrapper > div {
   margin: 20px;
 }
