--- a/src/components/Textbook/Words/Words.css
+++ b/src/components/Textbook/Words/Words.css
@@ -1,3 +1,7 @@
+.words-wrapper {
+  display: flex;
+}
+
 .word-select-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -6,4 +10,9 @@
 
 .word-select-wrapper > div {
   margin: 10px;
+}
+
+.selected-word-wrapper {
+  width: 60%;
+  padding: 10px;
 }
