--- a/src/components/Textbook/SelectWordCard/SelectWordCard.css
+++ b/src/components/Textbook/SelectWordCard/SelectWordCard.css
@@ -40,3 +40,20 @@
   justify-content: center;
   align-items: center;
 }
+
+.word-status {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  height: 20px;
+  width: 20px;
+  border: 4px double grey;
+  border-radius: 50%;
+}
+
+.word-status-message {
+  position: absolute;
+  top: 7px;
+  left: 40px;
+  font-size: 0.8rem;
+}
