feat: add select level component in sprint game

--- a/src/components/SprintGame/SelectLevel/SelectLevel.css
+++ b/src/components/SprintGame/SelectLevel/SelectLevel.css
@@ -20,6 +20,7 @@
 }
 
 .sprint-level-container div:hover {
-  transform: scale(1.2);
+  opacity: 1 !important;
+  transform: scale(1.2) !important;
 }
 
