--- a/src/components/Textbook/WordCard/WordCard.css
+++ b/src/components/Textbook/WordCard/WordCard.css
@@ -5,3 +5,13 @@
   border-radius: 20px;
   padding: 20px;
 }
+
+.word-card-sound {
+  display: flex;
+}
+
+.word-card-sound span {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-right: 20px;
+}
