feat: add styles to paginate

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -112,6 +112,14 @@ a:active {
   transform: rotateX(-180deg); */
 }
 
+.btn-success {
+  background-color: var(--success);
+}
+
+.btn-danger {
+  background-color: var(--danger);
+}
+
 .title-1 {
   font-size: 34px;
   margin: 0 0 25px 0;
