--- a/src/components/Authorization/authorization.css
+++ b/src/components/Authorization/authorization.css
@@ -1,13 +1,35 @@
 .auth-page {
-  min-height: 650px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: blanchedalmond;
 }
 
 .auth-form-wrapper {
-  width: 400px;
+  width: 350px;
+  border: 3px solid var(--accent-p4321-2);
+  padding: 20px;
+}
+
+.form-group {
+  display: flex;
+  justify-content: space-between;
   margin-top: 20px;
 }
 
+.form-control {
+  width: 100%;
+  height: 30px;
+  font-size: 1rem;
+  padding-left: 10px;
+  margin-bottom: 10px;
+}
+
+.alert-danger {
+  font-weight: 700;
+  color: var(--danger);
+}
+
+.text-center {
+  display: flex;
+  justify-content: center;
+}
