--- a/src/components/Textbook/Words/Words.css
+++ b/src/components/Textbook/Words/Words.css
@@ -5,6 +5,7 @@
 .word-select-wrapper {
   display: flex;
   flex-wrap: wrap;
+  align-content: flex-start;
   width: 40%;
 }
 
@@ -15,4 +16,59 @@
 .selected-word-wrapper {
   width: 60%;
   padding: 10px;
+}
+
+.word-radio-wrapper input {
+  margin-right: 10px;
+  margin-left: 40px;
+}
+
+input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+}
+
+input[type="radio"] + label {
+  position: relative;
+  cursor: pointer;
+  line-height: 30px;
+  padding: 0 0 0 35px;
+  margin-right: 40px;
+  margin-left: 20px;
+  font-weight: 700;
+  font-size: 1rem;
+}
+
+input[type="radio"] + label:before {
+  content: '';
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 22px;
+  height: 22px;
+  border: 1px solid var(--accent-dark1);
+  border-radius: 50%;
+  background: #FFF;
+}
+
+input[type="radio"] + label:after {
+  content: '';
+  position: absolute;
+  top: 9px;
+  left: 12px;
+  width: 0px;
+  height: 0px;
+  border-radius: 50%;
+  background: var(--accent-p4321-1);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.5);
+  opacity: 0;
+  transition: .2s;
+}
+
+input[type="radio"]:checked + label:after {
+  opacity: 1;
+  top: 1px;
+  left: 4px;
+  width: 16px;
+  height: 16px;
 }
