--- a/src/components/Textbook/Paginate/Paginate.css
+++ b/src/components/Textbook/Paginate/Paginate.css
@@ -40,7 +40,7 @@
   background-color: var(--accent-dark2);
 }
 
-.active {
+.paginate_active {
   background-color: var(--accent-dark1);
   width: 40px;
   height: 40px;
