--- a/src/components/TeamAbout/TeamAbout.css
+++ b/src/components/TeamAbout/TeamAbout.css
@@ -1,1 +1,111 @@
+.about-team {
+  border-bottom: 2px dashed var(--accent-p4321-7);
+}
 
+.about-team__text {
+  margin: 0 0 15px 0;
+}
+
+.about-team__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.about-team__item {
+  flex: 0 1 30%;
+  border-radius: 18px;
+  overflow: hidden;
+}
+
+.circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 200px;
+  font-weight: 700;
+}
+
+.about-team__foto {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 26px;
+  font-weight: 700;
+  background-color: var(--accent-p4321-3);
+  width: 100%;
+  height: 100%;
+  height: 200px;
+  border-radius: 18px;
+  background: url(./../../assets/img/03.jpg) no-repeat center center;
+  background-size: cover;
+  padding: 0 15px;
+  margin: 0 0 15px 0;
+  transform: rotate(-0.00001deg);
+  transition: 0.5s;
+}
+
+.about-team__card-text {
+  margin: 0 0 30px 0;
+}
+
+.about-team__foto:hover {
+  transform: scale(1.05);
+}
+
+.about-team__foto:hover span {
+  font-weight: 700;
+  color: var(--accent-p4321-1);
+  transition: 0.5s;
+}
+
+.about-team__foto::before {
+  position: absolute;
+  z-index: -1;
+  content: "";
+  top: 47px;
+  left: 173px;
+  width: 90px;
+  height: 90px;
+  border-radius: 12px;
+  color: var(--font-dark);
+  border: 2px dashed var(--accent-p4321-2);
+  transform: rotate(-18deg);
+}
+
+.about-team__role {
+  font-size: 16px;
+  opacity: 0.8;
+}
+
+.about-team__github::before {
+  position: absolute;
+  content: "";
+  top: 8px;
+  left: 30px;
+  width: 25px;
+  height: 25px;
+  background: url(./../../assets/svg/icons8-github.svg) no-repeat center center;
+  background-size: cover;
+}
+
+.about-team__github {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 0 30px;
+  font-size: 20px;
+  font-weight: 500;
+  border-radius: 12px;
+  line-height: 42px;
+  background-color: var(--accent-p4321-1);
+  margin: 0 0 15px 0;
+}
+
+.about-team__github:hover a {
+  color: var(--white);
+}
