--- a/src/components/Textbook/Paginate/Paginate.css
+++ b/src/components/Textbook/Paginate/Paginate.css
@@ -1,4 +1,4 @@
-.paginate-wrapper{
+.paginate-wrapper {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -11,18 +11,69 @@
 }
 
 .btn-paginate {
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
 .page-item {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  margin-right: 20px;
-  padding: 10px;
+  margin-right: 10px;
+  background-color: var(--accent-p4321-1);
 }
 
 .page-link {
-color: aliceblue;
-font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: aliceblue;
+  font-weight: 600;
+  font-size: 1rem;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.page-link:hover {
+  color: var(--white);
+  background-color: var(--accent-dark2);
+}
+
+.paginate_active {
+  background-color: var(--accent-dark1);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.page-item-btn {
+  box-sizing: content-box;
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  margin-right: 10px;
+  color: var(--font-dark);
+  background-color: transparent;
+  border: 2px solid var(--accent-p4321-1);
+}
+
+.page-link-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--font-dark);
+  font-weight: 600;
+  font-size: 1rem;
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.page-link-btn:hover {
+  border-radius: 10px;
+  color: var(--white);
+  background-color: var(--accent-p4321-1);
 }
