--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,7 @@
 
   --accent-p4321-1: #e48826;
   --accent-p4321-2: #bb99b7;
-  --accent-p4321-3: #ecc8c9 ;
+  --accent-p4321-3: #ecc8c9;
   --accent-p4321-4: #c6a78f;
   --accent-p4321-5: #a0b3a8;
 
@@ -19,9 +19,10 @@
   --danger: #bd3939;
   --success: #52b345;
   --white: #fff;
-  --font-dark: #222222; 
-  --font-family-accent: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  --font-family-accent2: 'Roboto Serif', serif;
+  --font-dark: #222222;
+  --font-family-accent: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  /* --font-family-accent2: 'Noto Serif', serif; */
+  --font-family-accent2: "Alice", serif;
 
   --font1: 80px;
   --font2: 32px;
@@ -31,7 +32,7 @@
 * {
   margin: 0;
   padding: 0;
-	border: 0;
+  border: 0;
   box-sizing: border-box;
 }
 
@@ -48,11 +49,11 @@ a:hover {
   text-decoration: none;
 }
 /* ====== /reset css ====== */
-html{
+html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-weight: 400;
   line-height: 1.4;
   font-size: 18px;
@@ -60,18 +61,22 @@ body {
   background-color: var(--accent-p4321-6);
 }
 
-a{
-  transition: color 0.5s;
+a {
+  transition: color 0.3s;
 }
 
 a:hover,
-a:active {
+a:active,
+a.active {
   color: var(--accent-dark2);
 }
 .container {
   max-width: 1240px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 30px 20px;
+}
+.main__screen {
+  min-height: calc(100vh - 97px - 77px - 2px);
 }
 
 .btn {
@@ -80,12 +85,21 @@ a:active {
   color: var(--font-dark);
   background-color: var(--accent-p4321-1);
   font-size: 18px;
-  line-height: 1.4;
+  line-height: 1.2;
   text-align: center;
   border-radius: 12px;
   border: 2px solid transparent;
   padding: 14px 16px;
+
+  transition: 0.3s;
 }
+
+.btn a:hover,
+.btn a:active {
+  color: var(--white);
+  width: 100px;
+}
+
 .btn--outline-light {
   color: var(--font-dark);
   background-color: transparent;
@@ -103,7 +117,8 @@ a:active {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+.btn.active {
   color: var(--white);
   background-color: var(--accent-dark2);
   border: 2px solid transparent;
@@ -122,16 +137,20 @@ a:active {
 
 .title-1 {
   font-size: 34px;
-  margin: 0 0 25px 0;
+  margin: 0 0 20px 0;
 }
 
 .title-2 {
-  font-size: 28px;
+  font-size: 30px;
   font-weight: 700;
-  margin: 0 0 20px 0;
+  margin: 0 0 15px 0;
 }
 .title-3 {
   font-size: 28px;
+  margin: 0 0 10px 0;
+}
+.title-4 {
+  font-size: 26px;
   margin: 0 0 10px 0;
 }
 
@@ -181,16 +200,16 @@ a:active {
 }
 /* ====== /bg-colors ====== */
 .color-accent-light {
-  color: var(--accent-p4321-1)
+  color: var(--accent-p4321-1);
 }
 .color-accent-dark {
-  color: var(--accent-dark2)
+  color: var(--accent-dark2);
 }
 .color-danger {
-  color: var(--danger)
+  color: var(--danger);
 }
 .color-success {
-  color: var(--success)
+  color: var(--success);
 }
 
 /* ====== examples ====== */
@@ -202,7 +221,7 @@ a:active {
   align-items: center;
   margin: 20px 0;
 }
-.ex{
+.ex {
   display: flex;
   align-items: center;
   width: 200px;
@@ -213,11 +232,6 @@ a:active {
 }
 /* ====== /examples ====== */
 
-
-.main__screen { 
-  min-height: calc(100vh - 190px);
-  padding: 30px 0;
-}
 /* ======= media ====== */
 
 /* ======= /media ====== */
