--- a/src/components/Textbook/Textbook.css
+++ b/src/components/Textbook/Textbook.css
@@ -4,10 +4,9 @@
 
 .game-card__container{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-around;
-  margin-left: auto;
-  margin-right: auto;
-  width: 1000px;
-  padding: 50px;
+  justify-content: center;
+  margin: 30px 0;
+  gap: 20px;
 }
