--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,7 +10,7 @@
   padding: 20px 20px;
 }
 
-.footer__column{
+.footer__column {
   display: flex;
   align-items: center;
 }
@@ -31,7 +31,7 @@
 .footer__github-image img {
   max-width: 100%;
 }
-.footer__rss-team{
+.footer__rss-team {
   font-family: var(--font-family-accent);
 }
 .footer__github-team {
@@ -61,3 +61,26 @@
   transition: 0.5s;
 }
 /* ====== /footer ====== */
+/* ======= media ====== */
+@media (max-width: 1060px) {
+  .footer {
+    font-size: 16px;
+  }
+  .footer__container {
+    padding: 15px 20px;
+  }
+}
+
+@media (max-width: 800px) {
+}
+
+@media (max-width: 767px) {
+  .footer__container {
+    padding: 20px 10px;
+    flex-direction: column-reverse;
+  }
+  .footer__rss-team {
+    margin: 0 0 15px 0;
+  }
+}
+/* ======= /media ====== */
